# modit

./: .gitignore  Cargo.toml  README.md  termion.sh
examples/: parse.rs  termion.rs  vi.rs  word.rs
src/: lib.rs  vi.rs
