[package]
name = "modit"
description = "Modal editor parser"
version = "0.1.2"
authors = ["Jeremy Soller <jeremy@system76.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pop-os/modit"

[dependencies]
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
termion = "2"
